refactor : 킹, 퀸, 나이트, 비숍, 룩, 폰 이동 가능한 위치 검색 기능 리팩터링